--- a/project_dotNet5780_1766_0406/PLWPF/MainWindow.xaml
+++ b/project_dotNet5780_1766_0406/PLWPF/MainWindow.xaml
@@ -31,10 +31,10 @@
         <TextBlock x:Name="loadingBanks" Text="Banks Are not yet Loaded! please wait"  HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0,10,0,0" Height="35" TextAlignment="Center"/>
         <Button x:Name="hostAreaButton" Content="Host Area" FontFamily="Agency FB" FontSize="36"
                 VerticalAlignment="Center" Width="216" Background ="{StaticResource ButtonsBrush}"
-                HorizontalAlignment="Center" Click="AddHostButton_Click" MouseEnter="HostAreaButton_MouseEnter"/>
-        <Button Content="Guest Request Area" FontFamily="Agency FB" FontSize="36"
+                HorizontalAlignment="Center" MouseEnter="HostAreaButton_MouseEnter"/>
+        <Button x:Name="guestRequestAreaButton" Content="Guest Request Area" FontFamily="Agency FB" FontSize="36"
                 VerticalAlignment="Center" Width="244" Background ="{StaticResource ButtonsBrush}"
-                HorizontalAlignment="Center" Click="AddGuestRequestButton_Click" Grid.Row="1"/>
+                HorizontalAlignment="Center" Grid.Row="1"/>
 
 
 
