--- a/project_dotNet5780_1766_0406/PLWPF/AddHostWin.xaml
+++ b/project_dotNet5780_1766_0406/PLWPF/AddHostWin.xaml
@@ -83,12 +83,24 @@
                             <Grid.Background>
                                 <ImageBrush ImageSource="Backgrounds/1.jpg"/>
                             </Grid.Background>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="*"/>
+                                <ColumnDefinition Width="*"/>
+                                <ColumnDefinition Width="*"/>
+                            </Grid.ColumnDefinitions>
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="101*"/>
+                                <RowDefinition Height="203*"/>
+                                <RowDefinition Height="152*"/>
+                                <RowDefinition Height="152*"/>
+                            </Grid.RowDefinitions>
+
                             <TextBlock x:Name="loginErrorMessage"
-                                       Foreground="Red" FontFamily="Agency FB" FontSize="18" Grid.Row="0" 
-                                       RenderTransformOrigin="1.207,-2.333" TextDecorations="{x:Null}" TextAlignment="Center" VerticalAlignment="Top"  />
-                            <TextBlock Text="Choose Host:" Background="AliceBlue" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="192,71,537,497" FontSize="18" FontFamily="Agency FB" Width="95" Height="40"/>
-                            <ComboBox x:Name="hostsComboBox" Grid.Column="0" Background ="{StaticResource ButtonsBrush}" ItemsSource="{Binding}" HorizontalAlignment="Center" Width="246" VerticalAlignment="Top" Height="44" Margin="304,71,274,0" FontSize="18"/>
-                            <StackPanel Orientation="Horizontal" Margin="280,151,129,392">
+                                       Foreground="Red" FontFamily="Agency FB" FontSize="18" Grid.Row="0" Grid.ColumnSpan="3"
+                                       RenderTransformOrigin="1.207,-2.333" TextDecorations="{x:Null}" TextAlignment="Center" VerticalAlignment="Top" Height="40"  />
+                            <TextBlock Text="Choose Host:" Background="AliceBlue" FontSize="18" FontFamily="Agency FB" Width="94" Height="40" Grid.Column="0" Grid.Row="1" HorizontalAlignment="Right" Margin="0,57,0,56" VerticalAlignment="Center"/>
+                            <ComboBox x:Name="hostsComboBox" Background ="{StaticResource ButtonsBrush}" Grid.Column="1" Grid.Row="1" ItemsSource="{Binding}" HorizontalAlignment="Center" Width="246" VerticalAlignment="Center" Height="44" FontSize="18" Margin="14,85,14,74"/>
+                            <StackPanel Orientation="Horizontal" Grid.Column="1" Grid.Row="2" Grid.ColumnSpan="2">
                                 <Button Content="Login"  Background ="{StaticResource ButtonsBrush}" Click="LoginButton_Click" Width="96" Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Center" Height="30"  FontSize="18" Margin="10,0,0,0"/>
                                 <Button Content="Logout" Background ="{StaticResource ButtonsBrush}" Click="LogoutButton_Click" Width="96" HorizontalAlignment="Center" Height="30" Margin="90,0,0,0" FontSize="18" VerticalAlignment="Center"/>
                             </StackPanel>
@@ -177,7 +189,10 @@
                                 <Label Content="Collection Clearance:" Opacity="0.8" Background="AliceBlue" Grid.Column="0" HorizontalAlignment="Left" Margin="3,3,0,4" Grid.Row="7" VerticalAlignment="Center" Height="31" Width="121"/>
                                 <CheckBox x:Name="detailsCollectionClearanceCheckBox" Content="" Grid.Column="1" HorizontalAlignment="Left" IsChecked="{Binding Path=CollectionClearance, Mode=TwoWay, NotifyOnValidationError=true, ValidatesOnExceptions=true, UpdateSourceTrigger=PropertyChanged}" Margin="23,14,0,11" Grid.Row="7" VerticalAlignment="Center" Height="14" Width="17"/>
                             </Grid>
-                            <Button  Grid.Column="0" Grid.Row="2" Content="Update Changes" Click="UpdateHostButton_Click" Background ="{StaticResource ButtonsBrush}" Margin="115,23,111,8" Height="31"/>
+                            <StackPanel Orientation="Horizontal" Grid.Column="0" Grid.Row="2" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="92,18,37,18" Height="50" Width="283" >
+                                <Button  Content="Update Changes" Click="UpdateHostButton_Click" Background ="{StaticResource ButtonsBrush}" Margin="20,8,0,8" Height="35" Width="108"/>
+                                <Button  x:Name="chargeMoney" Content="Charge Money" Background ="{StaticResource ButtonsBrush}" Height="35" Margin="20,8,0,8" Width="115" Click="ChargeMoney_Click"/>
+                            </StackPanel>
 
                             <TextBlock x:Name="errorMessageDetailsHostingUnit" Grid.Column="1" Grid.Row="0" Text="" Foreground="Red" HorizontalAlignment="Center" VerticalAlignment="Center"/>
                             <StackPanel Orientation="Horizontal" Grid.Column="1" Grid.Row="2" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0,0,15,0" >
